Fixed post icon on mobile

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -18,7 +18,7 @@
 }
 
 .custom-postfix {
-  height: 3rem;
+  height: 2.991rem;
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -157,6 +157,9 @@ a{
     $bg: #55acee
     // If true, set to button radius which is $global-radius or explicitly set radius amount in px (ex. $radius:10px). Default:false.
   );
+  @media #{small-only} {
+    padding-left: 1.3rem !important;
+  }
 }
 
 .column-left-fix {
